random_heat/jitfailure-dolfin_expression_299b5ab3c5c1f6ab4af1ea3cf4d2e697/error.log
/var/folders/br/kqx4wrcd4yn6zmk5jlrz9r7c0000gn/T/tmpbkdm_e5d/dolfin_expression_299b5ab3c5c1f6ab4af1ea3cf4d2e697.cpp:65:914: error: expected ';' after expression
          values[0] = ( cos(2 * pi * 1 * x[0] ) + cos(2 * pi * 1 * x[1] ) ) / (1 * 1 * pi * pi) * sampled[0] + ( cos(2 * pi * 2 * x[0] ) + cos(2 * pi * 2 * x[1] ) ) / (2 * 2 * pi * pi) * sampled[1] + ( cos(2 * pi * 3 * x[0] ) + cos(2 * pi * 3 * x[1] ) ) / (3 * 3 * pi * pi) * sampled[2] + ( cos(2 * pi * 4 * x[0] ) + cos(2 * pi * 4 * x[1] ) ) / (4 * 4 * pi * pi) * sampled[3] + ( cos(2 * pi * 5 * x[0] ) + cos(2 * pi * 5 * x[1] ) ) / (5 * 5 * pi * pi) * sampled[4] + ( cos(2 * pi * 6 * x[0] ) + cos(2 * pi * 6 * x[1] ) ) / (6 * 6 * pi * pi) * sampled[5] + ( cos(2 * pi * 7 * x[0] ) + cos(2 * pi * 7 * x[1] ) ) / (7 * 7 * pi * pi) * sampled[6] + ( cos(2 * pi * 8 * x[0] ) + cos(2 * pi * 8 * x[1] ) ) / (8 * 8 * pi * pi) * sampled[7] + ( cos(2 * pi * 9 * x[0] ) + cos(2 * pi * 9 * x[1] ) ) / (9 * 9 * pi * pi) * sampled[8] + ( cos(2 * pi * 10 * x[0] ) + cos(2 * pi * 10 * x[1] ) ) / (10 * 10 * pi * pi) * sampled[9]0.3;
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 ^
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 ;
/var/folders/br/kqx4wrcd4yn6zmk5jlrz9r7c0000gn/T/tmpbkdm_e5d/dolfin_expression_299b5ab3c5c1f6ab4af1ea3cf4d2e697.cpp:65:914: warning: expression result unused [-Wunused-value]
          values[0] = ( cos(2 * pi * 1 * x[0] ) + cos(2 * pi * 1 * x[1] ) ) / (1 * 1 * pi * pi) * sampled[0] + ( cos(2 * pi * 2 * x[0] ) + cos(2 * pi * 2 * x[1] ) ) / (2 * 2 * pi * pi) * sampled[1] + ( cos(2 * pi * 3 * x[0] ) + cos(2 * pi * 3 * x[1] ) ) / (3 * 3 * pi * pi) * sampled[2] + ( cos(2 * pi * 4 * x[0] ) + cos(2 * pi * 4 * x[1] ) ) / (4 * 4 * pi * pi) * sampled[3] + ( cos(2 * pi * 5 * x[0] ) + cos(2 * pi * 5 * x[1] ) ) / (5 * 5 * pi * pi) * sampled[4] + ( cos(2 * pi * 6 * x[0] ) + cos(2 * pi * 6 * x[1] ) ) / (6 * 6 * pi * pi) * sampled[5] + ( cos(2 * pi * 7 * x[0] ) + cos(2 * pi * 7 * x[1] ) ) / (7 * 7 * pi * pi) * sampled[6] + ( cos(2 * pi * 8 * x[0] ) + cos(2 * pi * 8 * x[1] ) ) / (8 * 8 * pi * pi) * sampled[7] + ( cos(2 * pi * 9 * x[0] ) + cos(2 * pi * 9 * x[1] ) ) / (9 * 9 * pi * pi) * sampled[8] + ( cos(2 * pi * 10 * x[0] ) + cos(2 * pi * 10 * x[1] ) ) / (10 * 10 * pi * pi) * sampled[9]0.3;
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 ^~~
1 warning and 1 error generated.
